# gpu-tuner

./: .gitignore  README.md  README.zh-CN.md  RELEASE_NOTES.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
src-tauri/nsis/: desktop-shortcut-options.nsh
src-tauri/src/: main.rs
src-tauri/src/gpu/: mod.rs  models.rs  nvapi.rs  nvml.rs
src-tauri/src/logs/: mod.rs
src-tauri/src/profiles/: mod.rs
src-tauri/src/safety/: mod.rs
src/components/: ConfirmDialog.tsx  Layout.tsx  StatCard.tsx  Toast.tsx
src/lib/: api.ts  types.ts
src/pages/: Dashboard.tsx  Logs.tsx  Profiles.tsx  Safety.tsx  Tuning.tsx
